python/testData/inspections/pyLazyImportInspection/insideFinally.py
try:
    pass
finally:
    <error descr="lazy imports must appear at module level">lazy</error> import os
